# cargo-bloat-example

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
