[package]
name = "cargo-bloat-example"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-humanize = "0.0.11"
chrono = "0.4.11"
ureq = { version = "0.12.1", default-features = false }
